[package]
name = "Xatico"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "*", features = ["json"] }
pyo3 = "*"
log = "*"
env_logger = "*"
sqlx = { version = "*", features = ["mysql", "runtime-tokio"]}
chrono = "*"